--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "name": "sibec",
+  "name": "geoportal",
   "version": "1.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "buildProduction": "ng build --configuration production --base-href /sicae/",
-    "vercel-build": "node ./scripts/set-env.js && ng build --configuration production",
-    "test": "ng test"
-  },
+ "scripts": {
+  "ng": "ng",
+  "start": "ng serve",
+  "build": "node ./scripts/set-env.js && ng build --configuration production",
+  "watch": "ng build --watch --configuration development",
+  "buildProduction": "ng build --configuration production --base-href /geoportal/",
+  "test": "ng test"
+},
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.1.0",
