--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "ng": "ng",
   "start": "ng serve",
   "build": "npm run build:prod:vercel",
-  "build:prod:vercel": "node ./scripts/set-env.js && ng build --configuration production",
+  "build:prod:vercel": "node ./scripts/env.js && ng build --configuration production",
   "build:prod:local": "ng build --configuration production",
   "watch": "ng build --watch --configuration development"
 },
