--- a/angular.json
+++ b/angular.json
@@ -49,6 +49,14 @@
                 }
               ],
               "outputHashing": "all",
+              "optimization": {
+                "scripts": true,
+                "styles": true,
+                "fonts": true
+              },
+              "sourceMap": false,
+              "namedChunks": false,
+              "aot": true,
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.development.ts",
