--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,25 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+*.env
+
+# Vercel
+.vercel
+
+# Logs
+*.log
+logs/
+
+# Build outputs
+dist/
+*.tsbuildinfo
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
